src/libelec.h

typedef struct elec_comp_s elec_comp_t;
/* Ties */
void libelec_tie_set_list(elec_comp_t *comp, size_t list_len,
    elec_comp_t *const bus_list[STATIC_ARRAY_LEN_ARG(list_len)]);
void libelec_tie_set_all(elec_comp_t *comp, bool tied);
bool libelec_tie_get_all(elec_comp_t *comp);
size_t libelec_tie_get_list(elec_comp_t *comp, size_t cap,
    elec_comp_t *bus_list[STATIC_ARRAY_LEN_ARG(cap)]);
size_t libelec_tie_get_num_buses(const elec_comp_t *comp);
/* Batteries */
double libelec_batt_get_chg_rel(const elec_comp_t *batt);
void libelec_batt_set_chg_rel(elec_comp_t *batt, double chg_rel);
double libelec_batt_get_temp(const elec_comp_t *batt);
void libelec_batt_set_temp(elec_comp_t *batt, double T);
/* Miscellaneous */
bool libelec_chgr_get_working(const elec_comp_t *chgr);
double libelec_phys_get_batt_voltage(double U_nominal, double chg_rel,
    double I_rel);