rust/src/elec.rs


	fn libelec_tie_set_list(comp: *mut elec_comp_t, list_len: usize,
	    bus_list: *const*const elec_comp_t);
	fn libelec_tie_set_all(comp: *mut elec_comp_t, tied: bool);
	fn libelec_tie_get_all(comp: *const elec_comp_t) -> bool;
	fn libelec_tie_get_list(comp: *const elec_comp_t, cap: usize,
	    bus_list: *mut*mut elec_comp_t) -> usize;
	fn libelec_tie_get_num_buses(comp: *const elec_comp_t) -> usize;

	fn libelec_batt_get_chg_rel(batt: *const elec_comp_t) -> f64;
	fn libelec_batt_set_chg_rel(batt: *mut elec_comp_t, chg_rel: f64);
	fn libelec_batt_get_temp(batt: *const elec_comp_t) -> f64;
	fn libelec_batt_set_temp(batt: *mut elec_comp_t, T: f64);

	fn libelec_chgr_get_working(chgr: *const elec_comp_t) -> bool;

	pub fn libelec_phys_get_batt_voltage(U_nominal: f64, chg_rel: f64,
	    I_rel: f64) -> f64;
}

mod tests {
	const TEST_NET_FILE: &str = "../nettest/test.net";
	extern "C" {
		fn crc64_init();
	}
	#[test]
	fn load_net() {
		use crate::ElecSys;
		unsafe { crc64_init() };
		ElecSys::new(TEST_NET_FILE)
		    .expect(&format!("Failed to load net {}", TEST_NET_FILE));
	}
	#[test]
	fn load_and_run_net() {
		use crate::ElecSys;
		unsafe { crc64_init() };
		let mut sys = ElecSys::new(TEST_NET_FILE)
		    .expect(&format!("Failed to load net {}", TEST_NET_FILE));
		sys.start();
		std::thread::sleep(std::time::Duration::new(1, 0));
		for comp in sys.all_comps().iter() {
			if !comp.get_autogen() {
				println!(concat!(
				    "{} ({:?}) U_in:{:.1}V  U_out:{:.1}V  ",
				    "I_in:{:.1}A  I_out:{:.1}A  ",
				    "W_in:{:.1}W  W_out:{:.1}W"),
				    comp.get_name(), comp.get_type(),
				    comp.in_volts(), comp.out_volts(),
				    comp.in_amps(), comp.out_amps(),
				    comp.in_pwr(), comp.out_pwr());
			}
		}
	}
	#[test]
	fn list_all_comps() {
		use crate::ElecSys;
		unsafe { crc64_init() };
		let sys = ElecSys::new(TEST_NET_FILE)
		    .expect(&format!("Failed to load net {}", TEST_NET_FILE));
		for comp in sys.all_comps().iter() {
			if !comp.get_autogen() {
				println!(concat!(
				    "{} of type {:?}; location: \"{}\"; ",
				    "U_in:{}V  U_out:{}V  I_in:{}A  ",
				    "I_out:{}A  W_in:{}W  W_out:{}W"),
				    comp.get_name(), comp.get_type(),
				    comp.get_location(),
				    comp.in_volts(), comp.out_volts(),
				    comp.in_amps(), comp.out_amps(),
				    comp.in_pwr(), comp.out_pwr());
			}
		}
	}
}
